package.json 修正

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-node-base",
+  "name": "backlog-jira-diff",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
